--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
-  "author": "",
+  "author": "Swagat Kumar Patel",
   "type": "module",
   "main": "index.js",
   "scripts": {
